--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "qr-creator": "^1.0.0",
+    "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0",
     "ws": "^8.12.1"
   }
 }
