--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "qr-creator": "^1.0.0",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0",
