--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qr-creator": "^1.0.0",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0",
+    "vite-plugin-css-injected-by-js": "^3.1.2",
     "ws": "^8.12.1"
   }
 }
