--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "nanoid": "^4.0.2",
     "qr-creator": "^1.0.0",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0",
