--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "terser": "^5.19.2",
     "vite": "^4.1.0"
   },
   "dependencies": {
