--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "appwrite": "^11.0.0",
     "nanoid": "^4.0.2",
     "qr-creator": "^1.0.0",
     "socket.io-client": "^4.6.1",
